[package]
name = "lor_api_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
log4rs = "1.2.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = "1.0.171"
serde_json = "1.0.100"
